--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -23,5 +23,6 @@
     "types": []
   },
   "include": ["src", "vite.config.ts"],
+  "exclude": ["vite.config.ts", "node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
