--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.45.0",
+    "@vitejs/plugin-react": "^4.6.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -53,6 +54,7 @@
     "vite-plugin-pwa": "^0.19.8"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/aes-js": "^3.1.4",
     "@types/node": "^20.19.1",
@@ -61,7 +63,6 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vite-pwa/assets-generator": "^0.2.4",
-    "@vitejs/plugin-react-swc": "^3.10.2",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
