--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,8 @@ node_modules/
 .pnp.js
 
 # Production builds
-/apps/web/build
-/apps/web/dist
-/apps/mobile/dist
-/apps/mobile/.expo
-/apps/api/dist
-# Dependencies
-node_modules/
-.pnp
-.pnp.js
-
-# Production builds
+build/
+dist/
 /apps/web/build
 /apps/web/dist
 /apps/mobile/dist
@@ -34,7 +25,7 @@ apps/*/node_modules/.vite/
 .env.production.local
 
 # Turborepo
-.turbo
+.turbo/
 
 # IDE
 .vscode/
@@ -99,7 +90,6 @@ jspm_packages/
 
 # Gatsby files
 .cache/
-public
 
 # Storybook build outputs
 .out
@@ -124,96 +114,3 @@ temp/
 
 # Local development
 *.local
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Turborepo
-.turbo
-
-# IDE
-.vscode/
-.idea/
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-public
-
-# Storybook build outputs
-.out
-.storybook-out
-
-# Temporary folders
-tmp/
-temp/
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
