apps/api/package-lock.json gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ apps/*/node_modules/
 package-lock.json
 apps/*/package-lock.json
 **/package-lock.json
+apps/api/package-lock.json
 
 # Production builds
 build/
