fix: ignore .package-lock.json files and remove from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ apps/*/node_modules/
 
 # Package lock files
 package-lock.json
+.package-lock.json
 apps/*/package-lock.json
 **/package-lock.json
+**/.package-lock.json
 apps/api/package-lock.json
 
 # Production builds
