--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon src/index.js",
     "lint": "eslint --fix src",
     "test": "jest",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "vercel-build": "echo hello"
   },
   "keywords": [],
