--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "clean": "turbo run clean"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "turbo": "^2.5.4"
   },
   "packageManager": "npm@10.0.0"
