--- a/apps/web/tsconfig.node.json
+++ b/apps/web/tsconfig.node.json
@@ -6,7 +6,11 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "typeRoots": ["./node_modules/@types", "../node_modules/@types", "../../node_modules/@types"]
+    "typeRoots": [
+      "./node_modules/@types",
+      "../node_modules/@types",
+      "../../node_modules/@types"
+    ]
   },
   "include": ["vite.config.ts"]
 }
