--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,36 +1,15 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "@typescript-eslint/recommended",
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:react-refresh/recommended"
-  ],
+  "extends": ["eslint:recommended"],
   "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "plugins": ["react", "react-hooks", "react-refresh", "@typescript-eslint"],
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-unused-vars": ["error", { "args": "none" }],
+    "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
-    "react/react-in-jsx-scope": "off",
-    "react-refresh/only-export-components": [
-      "warn",
-      { "allowConstantExport": true }
-    ]
+    "no-undef": "off"
   },
   "env": {
     "browser": true,
-    "es2020": true
+    "es2020": true,
+    "node": true
   }
 }
