--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -38,6 +38,7 @@
 		"expo-secure-store": "~14.2.3",
 		"expo-status-bar": "~2.2.3",
 		"expo-system-ui": "~5.0.7",
+		"expo-web-browser": "^14.2.0",
 		"lucide-react-native": "^0.519.0",
 		"nativewind": "^4.1.23",
 		"react": "19.0.0",
