npm install eslint@latest

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "prettier-plugin-tailwindcss": "^0.6.13",
     "turbo": "^2.5.4"
   },
-  "packageManager": "npm@10.0.0"
+  "packageManager": "npm@10.0.0",
+  "dependencies": {
+    "eslint": "^9.30.0"
+  }
 }
