--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,6 +13,7 @@
 		"generate-colors": "node ./scripts/generate-colors.js && eslint ./constants/colors.ts --fix"
 	},
 	"dependencies": {
+		"@gorhom/bottom-sheet": "^5.1.6",
 		"@hookform/resolvers": "^5.0.1",
 		"@react-native-async-storage/async-storage": "2.1.2",
 		"@rn-primitives/label": "^1.1.0",
@@ -47,7 +48,7 @@
 		"react-native": "0.79.4",
 		"react-native-gesture-handler": "~2.24.0",
 		"react-native-get-random-values": "~1.11.0",
-		"react-native-reanimated": "~3.17.3",
+		"react-native-reanimated": "~3.17.4",
 		"react-native-safe-area-context": "5.4.0",
 		"react-native-screens": "~4.11.1",
 		"react-native-svg": "15.11.2",
