--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -30,22 +30,22 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
-		"expo": "~53.0.8",
+		"expo": "53.0.17",
 		"expo-constants": "~17.1.6",
-		"expo-dev-client": "~5.2.2",
-		"expo-image": "~2.3.0",
-		"expo-linking": "~7.1.4",
-		"expo-router": "~5.1.1",
+		"expo-dev-client": "~5.2.4",
+		"expo-image": "~2.3.2",
+		"expo-linking": "~7.1.7",
+		"expo-router": "~5.1.3",
 		"expo-secure-store": "~14.2.3",
 		"expo-status-bar": "~2.2.3",
-		"expo-system-ui": "~5.0.7",
+		"expo-system-ui": "~5.0.10",
 		"expo-web-browser": "^14.2.0",
 		"lucide-react-native": "^0.312.0",
 		"nativewind": "^4.1.23",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-hook-form": "^7.55.0",
-		"react-native": "0.79.4",
+		"react-native": "0.79.5",
 		"react-native-gesture-handler": "~2.24.0",
 		"react-native-get-random-values": "~1.11.0",
 		"react-native-reanimated": "~3.17.4",
