--- a/apps/mobile/.prettierrc
+++ b/apps/mobile/.prettierrc
@@ -5,7 +5,7 @@
 	"singleQuote": false,
 	"quoteProps": "as-needed",
 	"jsxSingleQuote": false,
-	"trailingComma": "all",
+	"trailingComma": "none",
 	"bracketSpacing": true,
 	"bracketSameLine": false,
 	"arrowParens": "always",
