--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -2,10 +2,16 @@
 	"build": {
 		"development": {
 			"developmentClient": true,
-			"distribution": "internal"
+			"distribution": "internal",
+			"env": {
+				"EXPO_ROUTER_APP_ROOT": "./app"
+			}
 		},
 		"production": {
-			"distribution": "store"
+			"distribution": "store",
+			"env": {
+				"EXPO_ROUTER_APP_ROOT": "./app"
+			}
 		}
 	},
 	"submit": {
