--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,7 +11,7 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"generate-colors": "node ./scripts/generate-colors.js && eslint ./constants/colors.ts --fix",
-		"postinstall": "cd ../.. && yarn build"
+		"postinstall": "cd ../.. && npm run build"
 	},
 	"dependencies": {
 		"@gorhom/bottom-sheet": "^5.1.6",
