--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,6 +2,7 @@
 	"name": "hero-app-mobile",
 	"version": "1.0.0",
 	"main": "expo-router/entry",
+	"packageManager": "npm@10.0.0",
 	"scripts": {
 		"start": "expo start --dev-client",
 		"web": "expo start --web",
