--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@ apps/*/node_modules/
 .pnp
 .pnp.js
 
-# Package lock files
-package-lock.json
+# Package lock files (keeping root package-lock.json for proper workspace detection)
 .package-lock.json
 apps/*/package-lock.json
 **/package-lock.json
@@ -47,9 +46,6 @@ Thumbs.db
 
 # Logs
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
 
 # Runtime data
 pids
@@ -84,9 +80,6 @@ jspm_packages/
 
 # Output of 'npm pack'
 *.tgz
-
-# Yarn Integrity file
-.yarn-integrity
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
