Update EAS configuration to fix CocoaPods installation issue

--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -11,6 +11,10 @@
 			"distribution": "store",
 			"env": {
 				"EXPO_ROUTER_APP_ROOT": "./app"
+			},
+			"ios": {
+				"resourceClass": "m-medium",
+				"buildConfiguration": "Release"
 			}
 		}
 	},
