--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -48,6 +48,7 @@
 		"react-dom": "19.0.0",
 		"react-hook-form": "^7.55.0",
 		"react-native": "0.79.5",
+		"react-native-countdown-circle-timer": "^3.2.1",
 		"react-native-gesture-handler": "~2.24.0",
 		"react-native-get-random-values": "~1.11.0",
 		"react-native-reanimated": "~3.17.4",
