--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -59,7 +59,8 @@
 		"react-native-web": "^0.20.0",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "~3.4.17",
-		"zod": "^3.24.3"
+		"zod": "^3.24.3",
+		"expo-audio": "~0.4.8"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
