--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -60,7 +60,8 @@
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "~3.4.17",
 		"zod": "^3.24.3",
-		"expo-audio": "~0.4.8"
+		"expo-audio": "~0.4.8",
+		"@expo/ui": "~0.1.1-alpha.10"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
