--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -63,7 +63,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "~3.4.17",
     "zod": "^3.24.3",
-    "react-native-pager-view": "6.7.1"
+    "react-native-pager-view": "6.7.1",
+    "expo-haptics": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
