--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -38,6 +38,7 @@
     "expo-auth-session": "^6.2.1",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.4",
+    "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
@@ -54,6 +55,7 @@
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -62,9 +64,8 @@
     "react-native-web": "^0.20.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "~3.4.17",
-    "zod": "^3.24.3",
-    "react-native-pager-view": "6.7.1",
-    "expo-haptics": "~14.1.4"
+    "victory-native": "^37.3.6",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
