--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -52,10 +52,7 @@
 		},
 		"plugins": ["expo-router", "expo-secure-store"],
 		"extra": {
-			"router": {},
-			"eas": {
-				"projectId": "d832f74d-83c2-4d98-aa11-bdf11856d5f8"
-			}
+			"router": {}
 		},
 		"owner": "doncarlos"
 	}
