--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -52,7 +52,11 @@
 		},
 		"plugins": ["expo-router", "expo-secure-store"],
 		"extra": {
-			"router": {}
+			"router": {},
+			"EXPO_ROUTER_APP_ROOT": "./app",
+			"eas": {
+				"projectId": "1371c346-ed81-4421-832c-0d023859973d"
+			}
 		},
 		"owner": "doncarlos"
 	}
