--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -33,13 +33,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "53.0.17",
+    "expo": "~53.0.23",
     "expo-audio": "~0.4.8",
     "expo-auth-session": "^6.2.1",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.4",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
+    "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-secure-store": "~14.2.3",
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest",
     "@types/aes-js": "^3.1.4",
     "@types/react": "~19.0.10",
     "eslint": "^9.0.0",
