--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -77,6 +77,7 @@
 		"eslint-config-prettier": "^10.1.2",
 		"eslint-plugin-prettier": "^5.2.6",
 		"prettier": "^3.5.3",
+		"react-native-worklets": "^0.6.0",
 		"typescript": "~5.8.3"
 	},
 	"expo": {
