--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -47,7 +47,7 @@
 		"expo-system-ui": "~5.0.10",
 		"expo-web-browser": "^14.2.0",
 		"lucide-react-native": "^0.312.0",
-		"nativewind": "^4.1.23",
+		"nativewind": "4.1.23",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-hook-form": "^7.55.0",
