--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -1,6 +1,7 @@
 {
 	"cli": {
-		"requireCommit": true
+		"requireCommit": true,
+		"appVersionSource": "remote"
 	},
 	"build": {
 		"development": {
@@ -10,7 +11,15 @@
 				"EXPO_ROUTER_APP_ROOT": "./app"
 			}
 		},
+		"development-simulator": {
+			"developmentClient": true,
+			"ios": { "simulator": true },
+			"env": {
+				"EXPO_ROUTER_APP_ROOT": "./app"
+			}
+		},
 		"production": {
+			"autoIncrement": true,
 			"distribution": "store",
 			"env": {
 				"EXPO_ROUTER_APP_ROOT": "./app"
