--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -34,9 +34,11 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~53.0.23",
+    "expo-apple-authentication": "~7.2.4",
     "expo-audio": "~0.4.8",
     "expo-auth-session": "^6.2.1",
     "expo-constants": "~17.1.6",
+    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
