--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,7 @@
 		"@expo/ui": "~0.1.1-alpha.10",
 		"@gorhom/bottom-sheet": "^5.1.6",
 		"@hookform/resolvers": "^5.0.1",
+		"@legendapp/list": "^2.0.16",
 		"@react-native-async-storage/async-storage": "2.1.2",
 		"@react-native-community/datetimepicker": "8.4.1",
 		"@react-native-picker/picker": "2.11.1",
