--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -52,7 +52,6 @@
 		"expo-system-ui": "~5.0.10",
 		"expo-web-browser": "^14.2.0",
 		"lucide-react-native": "^0.312.0",
-		"nativewind": "4.1.23",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-hook-form": "^7.55.0",
@@ -69,7 +68,8 @@
 		"react-native-url-polyfill": "^2.0.0",
 		"react-native-web": "^0.20.0",
 		"tailwind-merge": "^3.2.0",
-		"tailwindcss": "~3.4.17",
+		"tailwindcss": "^4.1.18",
+		"uniwind": "^1.2.2",
 		"victory-native": "^37.3.6",
 		"zod": "^3.24.3"
 	},
